# assetmanage-rs

./: Cargo.toml  LICENSE  README.md
assets/: TestAsset.ron  TestAssetCopy.ron
examples/: legion-integration.rs  legion-integration.rs1
src/: asset.rs  builder.rs  lib.rs  loader.rs  manager.rs  tests.rs
src/loaders/: memory_loader.rs  mod.rs
src/sources/: disk_source.rs  mod.rs
