[package]
name = "assetmanage-rs"
version = "0.1.0"
authors = ["floatingmountain <shattered.web.master@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4"
async-std = "1.5"
futures = "0.3"
crossbeam = "0.7"
[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
ron = "0.5"
legion = "0.2.1"
log = "0.4.8"
pretty_env_logger ="0.4.0"