[package]
name = "assetmanage-rs"
version = "0.1.0"
authors = ["floatingmountain <shattered.web.master@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4"

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.async-std]
version = "1.5"
default-features = false
features = ["std", "default"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
ron = "0.5"
legion = "0.2.1"
log = "0.4.8"
pretty_env_logger ="0.4.0"